Generate JWT_SECRET and ADMIN_JWT_SECRET

--- a/render.yaml
+++ b/render.yaml
@@ -16,3 +16,7 @@ services:
         value: production
       - key: DATABASE_FILENAME
         value: /data/strapi.db
+      - key: JWT_SECRET
+        generateValue: true
+      - key: ADMIN_JWT_SECRET
+        generateValue: true
