Add health check path

--- a/render.yaml
+++ b/render.yaml
@@ -5,6 +5,7 @@ services:
     plan: starter
     buildCommand: yarn install && yarn build
     startCommand: rsync -a public/ /data/public/ && yarn start
+    healthCheckPath: /_health
     disk:
       name: strapi-data
       mountPath: /data
