--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: strapi
     env: node
     plan: starter
+    autoDeploy: false
     buildCommand: yarn install && yarn build
     startCommand: rsync -a public/ /data/public/ && yarn start
     healthCheckPath: /_health
