--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "strapi-plugin-content-manager": "3.4.1",
     "strapi-plugin-content-type-builder": "3.4.1",
     "strapi-plugin-email": "3.4.1",
+    "strapi-plugin-graphql": "3.4.1",
     "strapi-plugin-upload": "3.4.1",
     "strapi-plugin-users-permissions": "3.4.1",
     "strapi-utils": "3.4.1"
