--- a/api/values/models/values.settings.json
+++ b/api/values/models/values.settings.json
@@ -1,9 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "technologies",
+  "collectionName": "values",
   "info": {
-    "name": "Technologies",
-    "description": ""
+    "name": "Values"
   },
   "options": {
     "increments": true,
@@ -11,10 +10,7 @@
     "draftAndPublish": true
   },
   "attributes": {
-    "Name": {
-      "type": "string"
-    },
-    "Type": {
+    "Title": {
       "type": "string"
     },
     "Description": {
