Add new data; change relations in team and employee

--- a/api/team/models/team.settings.json
+++ b/api/team/models/team.settings.json
@@ -13,14 +13,9 @@
     "Name": {
       "type": "string"
     },
-    "Surname": {
-      "type": "string"
-    },
-    "Position": {
-      "type": "string"
-    },
-    "Photo_URL": {
-      "type": "string"
+    "employees": {
+      "via": "teams",
+      "collection": "employee"
     }
   }
 }
