--- a/api/home-main/models/home-main.settings.json
+++ b/api/home-main/models/home-main.settings.json
@@ -12,22 +12,22 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "TitleCenter": {
+    "titleCenter": {
       "type": "string"
     },
-    "TitleCenterDesc": {
+    "titleCenterDesc": {
       "type": "text"
     },
-    "TitleLeft": {
+    "titleLeft": {
       "type": "string"
     },
-    "TitleLeftDesc": {
+    "titleLeftDesc": {
       "type": "text"
     },
-    "TitleRight": {
+    "titleRight": {
       "type": "string"
     },
-    "TitleRightDesc": {
+    "titleRightDesc": {
       "type": "text"
     }
   }
