--- a/api/technologies/models/technologies.settings.json
+++ b/api/technologies/models/technologies.settings.json
@@ -2,7 +2,8 @@
   "kind": "singleType",
   "collectionName": "technologies",
   "info": {
-    "name": "Technologies"
+    "name": "Technologies",
+    "description": ""
   },
   "options": {
     "increments": true,
