Add logic to send reuests from contact form to email, modified env.example

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {},
   "dependencies": {
     "knex": "0.21.18",
+    "nodemailer": "^6.6.3",
     "sqlite3": "5.0.0",
     "strapi": "3.6.5",
     "strapi-admin": "3.6.5",
