--- a/package.json
+++ b/package.json
@@ -11,17 +11,10 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "knex": "<0.20.0",
-    "sqlite3": "latest",
-    "strapi": "3.4.5",
-    "strapi-admin": "3.4.5",
-    "strapi-connector-bookshelf": "3.4.5",
-    "strapi-plugin-content-manager": "3.4.5",
-    "strapi-plugin-content-type-builder": "3.4.5",
-    "strapi-plugin-email": "3.4.5",
-    "strapi-plugin-upload": "3.4.5",
-    "strapi-plugin-users-permissions": "3.4.5",
-    "strapi-utils": "3.4.5"
+    "@strapi/plugin-i18n": "4.1.3",
+    "@strapi/strapi": "4.1.3",
+    "@strapi/plugin-users-permissions": "4.1.3",
+    "sqlite3": "^5.0.2"
   },
   "author": {
     "name": "A Strapi developer"
