--- a/render.yaml
+++ b/render.yaml
@@ -24,3 +24,6 @@ services:
         generateValue: true
       - key: APP_KEYS
         generateValue: true
+      - key: API_TOKEN_SALT
+        generateValue: true
+
