--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-i18n": "4.2.3",
-    "@strapi/strapi": "4.2.3",
     "@strapi/plugin-users-permissions": "4.2.3",
+    "@strapi/provider-upload-aws-s3": "^4.2.3",
+    "@strapi/strapi": "4.2.3",
     "sqlite3": "^5.0.2",
     "strapi-plugin-import-export-entries": "^1.6.3"
   },
