remove url field in invite people

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.2.3",
-    "@strapi/plugin-users-permissions": "4.2.3",
-    "@strapi/strapi": "4.2.3",
+    "@strapi/plugin-i18n": "4.3.0",
+    "@strapi/plugin-users-permissions": "4.3.0",
+    "@strapi/provider-email-amazon-ses": "^4.3.0",
+    "@strapi/provider-upload-aws-s3": "^4.3.0",
+    "@strapi/strapi": "4.3.0",
     "sqlite3": "^5.0.2",
     "strapi-plugin-import-export-entries": "^1.6.3"
   },
